20180529 added index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>2048</title>
+  <link href="style/main.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="favicon.ico">
+</head>
+<body>
+  <div class="container">
+    <div class="heading">
+      <h1 class="title">2048</h1>
+      <div class="scores-container">
+        <div class="score-container"><%= score %></div>
+      </div>
+    </div>
+
+    <div class="above-game">
+      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+    </div>
+    <div class="above-game">   
+    <p class="game-intro">Number of Rows
+    <select id='numberOfRow'>
+    <option value = "4" selected> 4 </option>
+    <option value = "5"> 5 </option>
+    <option value = "6"> 6 </option>
+    <option value = "7"> 7 </option>
+    <option value = "8"> 8 </option>
+    <option value = "9"> 9 </option>
+    <option value = "10"> 10 </option>
+    <option value = "15"> 15 </option>
+    <option value = "20"> 20 </option>
+    <option value = "50"> 50 </option>
+    <option value = "100"> 100 </option>
+    </select>
+    </p>
+    	<a class="restart-button">New Game</a>
+    </div>
+    <div class="above-game">
+    	<a class="auto-button">Auto Solve</a>
+    </div>
+    	<div class="above-game">
+    <a class="stop-button">Stop Auto</a> 
+    </div>
+    	<div class="above-game">
+    <a class="multiply-button">Multiply</a> 
+    </div>
+    <div class="game-container">
+      <div class="game-message">
+        <p></p>
+        <div class="lower">
+	        <a class="keep-playing-button">Keep going</a>
+          <a class="retry-button">Try again</a>
+        </div>
+      </div>
+
+      <div class="grid-container"></div>
+      <div class="tile-container"></div>
+    </div>
+  </div>
+   <script src="js/GridContainer.js"></script>
+   <script src="js/AI.js"></script>
+   <script src="js/main.js"></script>
+</body>
 </html>
