--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,16 +22,11 @@
     <p class="game-intro">Number of Rows
     <select id='numberOfRow'>
     <option value = "4" selected> 4 </option>
-    <option value = "5"> 5 </option>
-    <option value = "6"> 6 </option>
-    <option value = "7"> 7 </option>
-    <option value = "8"> 8 </option>
-    <option value = "9"> 9 </option>
-    <option value = "10"> 10 </option>
-    <option value = "15"> 15 </option>
-    <option value = "20"> 20 </option>
-    <option value = "50"> 50 </option>
-    <option value = "100"> 100 </option>
+    <% for(var i=5; i<101; i++){ %>
+    
+    <option value = '<%= i %> '> <%= i %> </option>
+    
+    <% } %>
     </select>
     </p>
     	<a class="restart-button">New Game</a>
