--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,8 @@
   <div class="container">
     <div class="heading">
       <h1 class="title">2048</h1>
-      <div class="scores-container">
-        <div class="score-container"></div>
-      </div>
+      <div class="best-container">0</div>
+      <div class="score-container"></div>
     </div>
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
