--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+ <head>
   <meta charset="utf-8">
   <title>2048</title>
   <link href="style/main.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="style/favicon.ico">
 </head>
 <body>
   <div class="container">
